--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,10 @@ ul{
   display: flex;
   flex-direction: column;
   gap: .5rem;
-  flex-wrap: wrap;
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  width: 1px;
 }
 li{
   width: 100%;
@@ -69,7 +72,7 @@ li{
   border: 1px solid whitesmoke;
   background: aliceblue;
   border-radius: 8px;
-  padding: 10px;  
+  padding: .8rem;  
   display: flex;
   justify-content: space-between;
 }
@@ -97,7 +100,7 @@ li button{
 }
 .modal-content{
   width: 250px;
-  height: 100px;
+  height: 130px;
   border-radius: 10px;
   z-index: 2;
   background: rgb(215, 210, 210);
@@ -111,11 +114,12 @@ li button{
 }
 .modal-content i{
   display: block;
+  font-size: x-large;
   text-align: center;
-  padding-top: 7px ;
+  padding-top: 12px ;
   background: greenyellow;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   margin: 0.5rem auto;
 }
@@ -135,8 +139,7 @@ li button{
   }
 }
 @media (min-width:1070px){
-  .App{
-    
+  .App{    
     width:1000px;
   }
 }
