--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   --btn-hover:#0c5513;
 }
 body{
-  background-image: url(.\assets\blue_grunge_pattern_background.jpg);
+  background-image: url(.\assets\blue.jpg);
   background-position: center;
   background-size: contain;
 }
